fix z-index canvas/lock bug

--- a/DAIT Website/css/styles.css
+++ b/DAIT Website/css/styles.css
@@ -161,11 +161,12 @@ z-index: 10;
   width: 100%;
   height: calc(100% - 10.6rem);
   bottom: 4.3rem;
+  z-index: 100;
 }
 
 .camera_button_wrapper {
   margin-bottom: 3rem;
-  z-index: 2;
+  z-index: 102;
 }
 
 #btn-scan-qr {
